fix(ARC-3003): fix css styling issues on mobile homepage
https://meemoo.atlassian.net/browse/ARC-3003

--- a/src/styles/admin-core/content-blocks/_hetarchief-header-search-block.scss
+++ b/src/styles/admin-core/content-blocks/_hetarchief-header-search-block.scss
@@ -53,7 +53,10 @@ $component: "c-block-het-archief-header-search";
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		max-width: 42%;
+
+		@media (min-width: $breakpoint-md) {
+			max-width: 42%;
+		}
 
 		input {
 			border-radius: 4rem;
